<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:background="@color/black">

    <TextView
        android:id="@+id/profil"
        android:gravity="center"
        android:layout_marginTop="30dp"
        style="@style/title.profile"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/white_background_block" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_below="@id/profil"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:id="@+id/data"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@android:drawable/ic_menu_edit"
            android:hint="@string/imie" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@android:drawable/ic_menu_edit"
            android:hint="@string/nazwisko" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@android:drawable/ic_menu_edit"
            android:hint="@string/adres" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historia_transakcji"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/data">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

</RelativeLayout>