<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOffer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgAddOffer"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_box" />

            <EditText
                android:id="@+id/productNameAddOffer"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/nazwa_produktu"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.534"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAddOffer" />

            <TextView
                android:id="@+id/unitsTextAddOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/ilosc_sztuk"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/productNameAddOffer"
                app:layout_constraintTop_toBottomOf="@+id/productNameAddOffer" />

            <TextView
                android:id="@+id/priceTextAddOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/cena_sztuka"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/unitsTextAddOffer"
                app:layout_constraintTop_toBottomOf="@+id/unitsTextAddOffer" />

            <EditText
                android:id="@+id/unitsAddOffer"
                android:layout_width="60dp"
                android:layout_height="54dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="10"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toEndOf="@+id/unitsTextAddOffer"
                app:layout_constraintTop_toBottomOf="@+id/productNameAddOffer" />

            <EditText
                android:id="@+id/priceAddOffer"
                android:layout_width="60dp"
                android:layout_height="54dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="99,44"
                android:inputType="numberSigned"
                app:layout_constraintStart_toEndOf="@+id/priceTextAddOffer"
                app:layout_constraintTop_toBottomOf="@+id/unitsTextAddOffer" />

            <ImageView
                android:id="@+id/editIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/productNameAddOffer"
                app:layout_constraintEnd_toEndOf="@+id/productNameAddOffer"
                app:layout_constraintTop_toTopOf="@+id/productNameAddOffer"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_edit" />

            <TextView
                android:id="@+id/typeTextAddOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/wegiel_typ"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/priceTextAddOffer"
                app:layout_constraintTop_toBottomOf="@+id/priceTextAddOffer" />

            <Spinner
                android:id="@+id/dropdownTypeAddOffer"
                android:layout_width="100dp"
                android:layout_height="54dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/title_activity_cart"
                app:layout_constraintStart_toEndOf="@+id/typeTextAddOffer"
                app:layout_constraintTop_toBottomOf="@+id/priceTextAddOffer" />

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dropdownTypeAddOffer" />

            <View
                android:id="@+id/divider3"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkboxCourier" />

            <TextView
                android:id="@+id/title1AddOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/mozliwe_dostawy"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/typeTextAddOffer"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

            <TextView
                android:id="@+id/title2AddOffer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:text="@string/mozliwe_zaplaty"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/title1AddOffer"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <CheckBox
                android:id="@+id/checkboxPersonalPickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odbior_osobisty"
                app:layout_constraintStart_toStartOf="@+id/title1AddOffer"
                app:layout_constraintTop_toBottomOf="@+id/title1AddOffer" />

            <CheckBox
                android:id="@+id/checkboxBlik"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blik"
                app:layout_constraintStart_toStartOf="@+id/title2AddOffer"
                app:layout_constraintTop_toBottomOf="@+id/title2AddOffer" />

            <CheckBox
                android:id="@+id/checkboxTransfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/przelew_bankowy"
                app:layout_constraintStart_toStartOf="@+id/checkboxBlik"
                app:layout_constraintTop_toBottomOf="@+id/checkboxBlik" />

            <CheckBox
                android:id="@+id/checkboxCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/za_pobraniem"
                app:layout_constraintStart_toStartOf="@+id/checkboxTransfer"
                app:layout_constraintTop_toBottomOf="@+id/checkboxTransfer" />

            <CheckBox
                android:id="@+id/checkboxCourier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kurier"
                app:layout_constraintStart_toStartOf="@+id/checkboxPersonalPickup"
                app:layout_constraintTop_toBottomOf="@+id/checkboxPersonalPickup" />


            <Button
                android:id="@+id/buttonAddOffer"
                style="@style/button_grey"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/dodaj_oferte"
                app:backgroundTint="@color/gold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkboxCash" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>